  * include menuselect.makeopts in the docs directory - let us know what
    modules were not built.

  [ Paul Belanger ]
  * Depend on libneon27-dev and libical-dev for calendar support.
  * Depend on libsrtp0-dev for SRTP support.
  * When compiling with DEB_BUILD_OPTIONS="debug" enable native Asterisk
    debugging tools.  Specifically DONT_OPTIMIZE, DEBUG_THREADS and
    --enable-dev-mode.

 -- Tzafrir Cohen <tzafrir@debian.org>  Mon, 11 Apr 2011 12:44:47 +0300

asterisk (1:1.6.2.9-2) unstable; urgency=high

  [ Tzafrir Cohen ]
  * Bump Standards version to 3.9.0 (no change needed).
  * rtcp_cli_fix: Backport a silly CLI parsing issue. (Closes: #589736)
  * Patch typos: fix a few typos in the source.
  * Patch man_hyphen: fix hyphen/minus issues in man pages.
  * Remove useless binaries aelparse, conf2ael and muted.

  [ Faidon Liambotis ]
  * Change the way that we read include files, to accommodate for changes
    in GCC 4.4. Taken from upstream's SVN, thanks to Peter Allgeyer for the
    patch and Stefan Bauer for preparing an upload. (Closes: #594190)
  * Set urgency high for a squeeze-targetted RC bug-fixing upload.

 -- Faidon Liambotis <paravoid@debian.org>  Tue, 07 Sep 2010 21:52:54 +0300

asterisk (1:1.6.2.9-1) unstable; urgency=low

  * New upstream release (Closes: #585156).
  - Patch dahdi_fxs_false_ringing removed: merged upstream.
  - Patch fxs_ports_1626 removed: merged upstream.
  * Fix dependencies so we start after named and such (Closes: #433779).
  * Do use libresample (app_jack, codec_resample).

 -- Tzafrir Cohen <tzafrir@debian.org>  Tue, 29 Jun 2010 23:53:28 +0300

asterisk (1:1.6.2.7-1) unstable; urgency=low

  * New upstream release
  * Add Build-Depends: libsqlite0-dev | libsqlite-dev
  * Included upstream: followme_prompts sqlite3_func_rename

 -- Mark Purcell <msp@debian.org>  Wed, 05 May 2010 23:36:52 +1000

asterisk (1:1.6.2.6-2) unstable; urgency=low

  * Also depend on openr2.