@@ -58,11 +58,8 @@ noload => chan_alsa.so
 ;
 noload => cdr_sqlite.so
 ;
-; These conflict with app_voicemail.so/app_directory.so and each other
-; These are for IMAP and ODBC storage for Voicemail
+; These conflict with app_directory.so and each other.
 noload => app_directory_odbc.so
-noload => app_voicemail_odbc.so
-noload => app_voicemail_imap.so
 ;
 ; Enable these if you want to configure Asterisk in a database
 ;
