@@ -27,7 +27,7 @@ upstream RPM packages include packages that are only somewhat cleaner.
  MENUSELECT_OPTS_app_directory:=$(MENUSELECT_OPTS_app_voicemail)
  ifneq ($(findstring ODBC_STORAGE,$(MENUSELECT_OPTS_app_voicemail)),)
    MENUSELECT_DEPENDS_app_voicemail+=$(MENUSELECT_DEPENDS_ODBC_STORAGE)
-@@ -25,6 +27,22 @@ endif
+@@ -25,6 +27,25 @@ endif
  
  all: _all
  
@@ -36,13 +36,16 @@ upstream RPM packages include packages that are only somewhat cleaner.
 +	cp $< $@
 +	$(call add_depends_cmd,imap_tk) $@
 +	$(call add_depends_cmd,openssl) $@
++	cp app_voicemail.exports.in app_voicemail_imapstorage.exports.in
 +app_voicemail_odbcstorage.c: app_voicemail.c
 +	cp $< $@
 +	$(call add_depends_cmd,unixodbc) $@
 +	$(call add_depends_cmd,ltdl) $@
++	cp app_voicemail.exports.in app_voicemail_odbcstorage.exports.in
 +
 +dist-clean::
 +	rm -f app_voicemail_*.c
++	rm -f app_voicemail_*.exports.in
 +
 +app_voicemail_imapstorage.o: _ASTCFLAGS+=-DIMAP_STORAGE
 +app_voicemail_odbcstorage.o: _ASTCFLAGS+=-DODBC_STORAGE
